# JumpingCubesClassic

./: .gitignore  CMakeLists.txt
misc/: class_diagram.dia
src/: CMakeLists.txt  GLDrawer.cpp  GLDrawer.h  Game.cpp  Game.h  JCCTypes.h  Network.cpp  Network.h  Renderer.h  main.cpp  main_Qt.cpp  main_SDL.cpp  renderers.h.in
src/QtRenderer2d/: CMakeLists.txt  JCCQWidget.cpp  JCCQWidget.h  QOpenGLWidget.cpp  QOpenGLWidget.h  QtRenderer.cpp  QtRenderer.h  main_qt.cpp  main_qt.h
src/SDLRenderer/: SDLHelper.cpp  SDLHelper.h  SDL_Kram.cpp  SDL_Kram.h  main_SDL.cpp
